# chasing-your-tail-ng

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.md  pyproject.toml
config/: collector.example.json
docs/: code-inventory.md  collector-build.md
docs/archive/inherited-root/: README.md
research/: README.md
src/tail_chasing/: __init__.py  cli.py  collector.py  ignore_lists.py  kismet_runtime.py
tests/: test_cli.py
tests/live/: test_kismet_live.py
