[build-system]
requires = ["uv_build>=0.11.24,<0.12"]
build-backend = "uv_build"

[project]
name = "tail-chasing"
version = "0.1.0"
description = "Wi-Fi probe and Kismet analysis tooling for local security research."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "cryptography>=49.0.0",
    "requests>=2.34.2",
    "typer>=0.26.8",
]

[project.scripts]
tail-chasing = "tail_chasing.cli:main"

[tool.uv.build-backend]
module-name = "tail_chasing"
module-root = "src"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "ty>=0.0.56",
    "vulture>=2.16",
]

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
strict = true
markers = [
    "live: exercises a running local Kismet capture and repo-local runtime state",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["src/tail_chasing/inherited"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  # Rules Ruff documents as conflicting with its formatter.
  "W191", "E111", "E114", "E117", "D203", "D206", "D213", "D300",
  "Q000", "Q001", "Q002", "Q003", "Q004", "COM812", "COM819", "ISC002",
  # Deliberate project style.
  "D",
  "TRY003", "EM101", "EM102",
  "ANN401",
  "PLR0913",
  "TC001", "TC002", "TC003",
]

[tool.ruff.lint.per-file-ignores]
"src/tail_chasing/cli.py" = ["FBT001", "FBT002"]
"src/tail_chasing/kismet_runtime.py" = ["S603"]
"tests/**" = [
  "S101", "PLR2004", "INP001", "ARG001",
  "D100", "D101", "D102", "D103", "D104", "D107",
  "ANN001", "ANN002", "ANN003", "ANN201", "ANN202", "ANN204",
  "TC001", "TC002", "TC003",
]

[tool.ty.environment]
python = ".venv"
root = ["src", "tests"]

[tool.ty.rules]
unused-ignore-comment = "error"

[tool.vulture]
paths = ["src/tail_chasing", "tests"]
exclude = ["*/src/tail_chasing/inherited/*"]
min_confidence = 100
