[build-system]
requires = ["uv_build>=0.11.24,<0.12"]
build-backend = "uv_build"

[project]
name = "tail-chasing"
version = "0.1.0"
description = "Portable Kismet Wi-Fi and Bluetooth collector tooling."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "typer>=0.26.8",
]

[project.scripts]
tail-chasing = "tail_chasing.cli:main"

[tool.uv.build-backend]
module-name = "tail_chasing"
module-root = "src"

[dependency-groups]
dev = [
    "ruff>=0.15.20",
    "ty>=0.0.56",
    "vulture>=2.16",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  # Rules Ruff documents as conflicting with its formatter.
  "W191", "E111", "E114", "E117", "D203", "D206", "D213", "D300",
  "Q000", "Q001", "Q002", "Q003", "Q004", "COM812", "COM819", "ISC002",
  # Deliberate project style.
  "D",
  "TRY003", "EM101", "EM102",
  "ANN401",
  "PLR0913",
  "TC001", "TC002", "TC003",
]

[tool.ruff.lint.per-file-ignores]
"src/tail_chasing/cli.py" = ["FBT001", "FBT002"]
"src/tail_chasing/kismet_runtime.py" = ["S603"]

[tool.ty.environment]
python = ".venv"
root = ["src"]

[tool.ty.rules]
unused-ignore-comment = "error"

[tool.vulture]
paths = ["src/tail_chasing"]
min_confidence = 100
